--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run buil",
+    "predeploy": "npm run build",
     "buil": "gh-pages -d dist"
   },
   "dependencies": {
